testdata/baselines/reference/submodule/compiler/indexSignatureInOtherFile1.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
other.ts(14,3): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
other.ts(14,4): error TS2304: Cannot find name 'Symbol'.
other.ts(14,24): error TS2304: Cannot find name 'IterableIterator'.
other.ts(23,3): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
other.ts(23,4): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== other.ts (5 errors) ====
    interface Array1<T> {
      length: number;
      [n: number]: T;
    }
    
    interface ArrayConstructor1 {
      new(arrayLength?: number): Array1<any>;
    }
    
    declare var Array1: ArrayConstructor1;
    
    // iterable.d.ts
    interface Array1<T> {
      [Symbol.iterator](): IterableIterator<T>;
      ~~~~~~~~~~~~~~~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
       ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
                           ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IterableIterator'.
    }
    
    // symbol.wellknown.d.ts
    interface Array1<T> {
      /**
       * Returns an object whose properties have the value 'true'
       * when they will be absent when used in a 'with' statement.
       */
      [Symbol.unscopables](): {
      ~~~~~~~~~~~~~~~~~~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
       ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
          copyWithin: boolean;
          entries: boolean;
          fill: boolean;
          find: boolean;
          findIndex: boolean;
          keys: boolean;
          values: boolean;
      };
    }
    
==== index.ts (0 errors) ====
    class Test extends Array1 {
      [key: symbol]: string
    }